Fix weird spacing of hidden letters when more than two words

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -67,6 +67,12 @@ section.episode-info {
   margin-top: -6vh;
 }
 
+section.secret-letter-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 section.alpha-pick {
   width: 100%;
   margin-top: 1vh;
